# opu

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml  tests.yml
cli/: Cargo.toml
cli/src/: commands.rs  config.rs  file_utils.rs  load.rs  main.rs  prompt.rs  save.rs  utils.rs
core/: Cargo.toml
core/assets/: opu_metadata.aif
core/src/: config.rs  dirs.rs  file_utils.rs  lib.rs  metadata.rs  op1.rs  project.rs  static_files.rs
core/src/metadata/: mixer_settings.rs  mod.rs  tempo_settings.rs
core/src/op1/: dirs.rs  effect.rs  mod.rs  subdirs.rs
core/src/static/: opu_metadata.aif
gui/: Cargo.toml
gui/src/: config.rs  loading.rs  main.rs
gui/src/components/: mod.rs  select_operation.rs  wait_for_op1.rs
gui/src/components/operations/: load.rs  mod.rs
gui/src/stages/: load.rs  mod.rs  save.rs  select_operation.rs  wait_for_op1.rs
gui/src/style/: mod.rs
gui/src/style/colors/: firmware.rs  hardware.rs  mod.rs
gui/src/style/themes/: dark.rs  light.rs  mod.rs
macro-utils/: Cargo.toml
macro-utils/src/: lib.rs  prompt.rs
macros/: Cargo.toml
macros/src/: cli_input.rs  lib.rs  subdirs.rs
src/: backup.rs  commands.rs  create.rs  dirs.rs  file_utils.rs  functions.rs  lib.rs  load.rs  main.rs  metadata.rs  op1.rs  patch_library.rs  project.rs  prompt.rs  save.rs  static_files.rs
src/static/: metadata.aif
