[package]
name = "rust-template"
version = "0.1.0"
authors = ["Michael Bryant <mbryant@triaxtec.com>"]
edition = "2018"
# Remove this if the project will be public/open source
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
