[package]
name = "opu"
version = "0.1.0"
authors = ["Ethan Mann <emanndev7@gmail.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
console = "0.14.1"
dialoguer = "0.8.0"
indicatif = "0.16.2"
toml = "0.5.8"
clap = "2.33.3"
sysinfo = "0.18.2"
fs_extra = "1.2.0"
rust-embed = "5.9.0"
chrono = {version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"