[package]
name = "cli"
version = "0.1.0"
authors = ["emannguitar <emannguitar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.12", features=["derive"]}
color-eyre = "0.5.11"
console = "0.14.1"
dialoguer = "0.8.0"
core = {path = "../core"}
indicatif = "0.16.2"