[package]
name = "opu-cli"
version = "0.1.0"
authors = ["Ethan Mann <emanndev7@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.12", features=["derive"]}
color-eyre = "0.5.11"
console = "0.14.1"
dialoguer = "0.8.0"
opu-core = {path = "../core"}
opu-macros = {path = "../macros"}
opu_macro_utils = {path = "../macro-utils"}
indicatif = "0.16.2"
fs_extra = "1.2.0"
tokio = {version="1.16.1", features=["macros"]}
serde = {version="1.0.136", features=["derive"]}