[package]
name = "opu-core"
version = "0.1.0"
authors = ["Ethan Mann <emanndev7@gmail.com"]
edition = "2021"

[features]
default = []
gui = ["fruid/iced"]
cli = ["fruid/cli"]


[dependencies]
toml = "0.5.8"
sysinfo = "0.18.2"
fs_extra = "1.2.0"
include-flate = "0.1.4"
tokio = { version = "1.16.1", features = ["time", "rt-multi-thread"] }
chrono = {version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
directories = "4.0.1"
thiserror = "1.0.25"
memchr = "2.4.1"
num = "0.4.0"
bounded-integer = { version="0.5.1", features=["macro"] }
fruid = { path = "../../fruid" }