[package]
name = "opu_macro_utils"
version = "0.1.0"
authors = ["Ethan Mann <emanndev7@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.75", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
quote = "1.0"
color-eyre = "0.5.11"
console = "0.14.1"
dialoguer = "0.8.0"
indicatif = "0.16.2"
log = "0.4.14"