[package]
name = "opu_macro_utils"
version = "0.1.0"
authors = ["Ethan Mann <emanndev7@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["cli"]
cli = ["console", "dialoguer", "indicatif"]
gui = []

[dependencies]
console = { version = "0.14.1", optional = true}
dialoguer = { version = "0.8.0", optional = true}
indicatif = { version = "0.16.2", optional = true}
