[package]
name = "opu-macros"
version = "0.1.0"
authors = ["Ethan Mann <emanndev7@gmail.com"]
edition = "2021"

[lib]
proc-macro = true

[features]
default = []
cli = ["opu_macro_utils/cli"]
gui = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.75", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
proc-macro-crate = "1.0"
quote = "1.0"
itertools = "0.10.3"
log = "0.4.14"
opu_macro_utils = {path = "../macro-utils"}
